feat: fix issues